<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TypeActivity">

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:text="@string/barcode_type"
        android:textStyle="bold"
        android:textColor="@color/blueishLight"
        android:textSize="30sp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/code1"
        android:onClick="btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonsbg"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:layout_marginTop="150dp"
        android:text="@string/type1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type"
        app:layout_constraintBottom_toTopOf="@+id/code2"/>

    <TextView
        android:id="@+id/code2"
        android:onClick="btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonsbg"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:text="@string/type2"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/code3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code1" />

    <TextView
        android:id="@+id/code3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonsbg"
        android:onClick="btn"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:text="@string/type3"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code2" />

</androidx.constraintlayout.widget.ConstraintLayout>