<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    tools:context=".BarcodeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:backgroundTint="#C8E3C2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et2">

        <ImageView
            android:id="@+id/resultIm2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bemoface2" />

    </androidx.cardview.widget.CardView>
    <EditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/write_something"
        android:textColorHint="@color/black"
        android:textAlignment="center"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/linear"
        app:layout_constraintTop_toBottomOf="@+id/card2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Generate"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/generatebtn"
            android:onClick="generate"
            android:text="@string/generate"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/backbtn"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backbtn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            android:background="@drawable/backbtn"
            android:onClick="back"
            android:text="@string/back"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/Generate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>